--- a/source/.vscode/extensions.json
+++ b/source/.vscode/extensions.json
@@ -1,6 +1,8 @@
 {
     "recommendations": [
         "rust-lang.rust-analyzer",
-        "vadimcn.vscode-lldb"
+        "vadimcn.vscode-lldb",
+        "swellaby.vscode-rust-test-adapter",
+        "rangav.vscode-thunder-client"
     ]
 }
