--- a/source/rest01/Cargo.toml
+++ b/source/rest01/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 actix-web = "2.0"
 actix-rt = "1.0"
+
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1"
+futures = "0.3"
